fixed overflow for smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ body,html
 .quest-board
 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: 1fr;
     gap: 1rem;
     padding: 2rem;
@@ -37,7 +37,7 @@ body,html
     height: fit-content;
     border-width: 2rem;
     border-style: solid;
-    box-shadow: 0rem 0rem .629rem .629rem inset black; /*any color you want*/
+    box-shadow: 0rem 0rem .629rem .629rem inset black; 
     border-image: url("../images/wood.jpg") 30 30 stretch;
     background-image: url("../images/wood.jpg");
 }
